@@ -1,5 +1,6 @@
 /* Multi-process/thread control defs for GDB, the GNU debugger.
-   Copyright (C) 1987-2013 Free Software Foundation, Inc.
+   Copyright (C) 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1997, 1998, 1999,
+   2000, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
    Contributed by Lynx Real-Time Systems, Inc.  Los Gatos, CA.
    
 
@@ -27,15 +28,6 @@ struct symtab;
 #include "frame.h"
 #include "ui-out.h"
 #include "inferior.h"
-
-/* Frontend view of the thread state.  Possible extensions: stepping,
-   finishing, until(ling),...  */
-enum thread_state
-{
-  THREAD_STOPPED,
-  THREAD_RUNNING,
-  THREAD_EXITED,
-};
 
 /* Inferior thread specific part of `struct infcall_control_state'.
 
@@ -122,7 +114,7 @@ struct thread_control_state
 struct thread_suspend_state
 {
   /* Last signal that the inferior received (why it stopped).  */
-  enum gdb_signal stop_signal;
+  enum target_signal stop_signal;
 };
 
 struct thread_info
@@ -141,7 +133,9 @@ struct thread_info
      from saying that there is an active target and we are stopped at
      a breakpoint, for instance.  This is a real indicator whether the
      thread is off and running.  */
-  int executing;
+  /* This field is internal to thread.c.  Never access it directly,
+     use is_executing instead.  */
+  int executing_;
 
   /* Frontend view of the thread state.  Note that the RUNNING/STOPPED
      states are different from EXECUTING.  When the thread is stopped
@@ -150,7 +144,9 @@ struct thread_info
      still be true.  As a possible future extension, this could turn
      into enum { stopped, exited, stepping, finishing, until(ling),
      running ... }  */
-  int state;
+  /* This field is internal to thread.c.  Never access it directly,
+     use is_running instead.  */
+  int state_;
 
   /* If this is > 0, then it means there's code out there that relies
      on this thread being listed.  Don't delete it from the lists even
@@ -180,15 +176,19 @@ struct thread_info
   int stepping_over_breakpoint;
 
   /* Set to TRUE if we should finish single-stepping over a breakpoint
-     after hitting the current step-resume breakpoint.  The context here
-     is that GDB is to do `next' or `step' while signal arrives.
-     When stepping over a breakpoint and signal arrives, GDB will attempt
-     to skip signal handler, so it inserts a step_resume_breakpoint at the
-     signal return address, and resume inferior.
-     step_after_step_resume_breakpoint is set to TRUE at this moment in
-     order to keep GDB in mind that there is still a breakpoint to step over
-     when GDB gets back SIGTRAP from step_resume_breakpoint.  */
+     after hitting the current step-resume breakpoint.  */
   int step_after_step_resume_breakpoint;
+
+  /* This is set TRUE when a catchpoint of a shared library event
+     triggers.  Since we don't wish to leave the inferior in the
+     solib hook when we report the event, we step the inferior
+     back to user code before stopping and reporting the event.  */
+  int stepping_through_solib_after_catch;
+
+  /* When stepping_through_solib_after_catch is TRUE, this is a
+     list of the catchpoints that should be reported as triggering
+     when we finally do stop stepping.  */
+  bpstat stepping_through_solib_catchpoints;
 
   /* Per-thread command support.  */
 
@@ -215,9 +215,7 @@ struct thread_info
   int stop_requested;
 
   /* The initiating frame of a nexting operation, used for deciding
-     which exceptions to intercept.  If it is null_frame_id no
-     bp_longjmp or bp_exception but longjmp has been caught just for
-     bp_longjmp_call_dummy.  */
+     which exceptions to intercept.  */
   struct frame_id initiating_frame;
 
   /* Private data used by the target vector implementation.  */
@@ -300,11 +298,6 @@ void thread_change_ptid (ptid_t old_ptid, ptid_t new_ptid);
 typedef int (*thread_callback_func) (struct thread_info *, void *);
 extern struct thread_info *iterate_over_threads (thread_callback_func, void *);
 
-/* Traverse all threads.  */
-
-#define ALL_THREADS(T)				\
-  for (T = thread_list; T; T = T->next)
-
 extern int thread_count (void);
 
 /* Switch from one thread to another.  */
@@ -353,7 +346,7 @@ extern int any_running (void);
    marks all threads.
 
    Note that this is different from the running state.  See the
-   description of state and executing fields of struct
+   description of state_ and executing_ fields of struct
    thread_info.  */
 extern void set_executing (ptid_t ptid, int executing);
 
@@ -394,7 +387,5 @@ extern struct cleanup *make_cleanup_restore_current_thread (void);
 extern struct thread_info* inferior_thread (void);
 
 extern void update_thread_list (void);
-
-extern struct thread_info *thread_list;
 
 #endif /* GDBTHREAD_H */
